• Added template for XSL-T • Updated syntax to use commonly-defined string definitions
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@1637 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Preferences/Miscellaneous.plist
+++ b/Preferences/Miscellaneous.plist
@@ -82,7 +82,7 @@
 				<string>]</string>
 			</array>
 			<array>
-				<string>{</string>
+				<string>${</string>
 				<string>}</string>
 			</array>
 			<array>
