--- a/info.plist
+++ b/info.plist
@@ -12,6 +12,7 @@
 		<string>F443A9C7-88A5-40EE-820E-A311B16D85C4</string>
 		<string>BC8BA078-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>D3C4E6DA-6B1C-11D9-8CC2-000D93589AF6</string>
+		<string>32E29AF6-904C-40F2-AF72-7797ADDAAA3C</string>
 		<string>95788610-7E2E-45CE-9CCE-708FE0C90BF7</string>
 		<string>34AB30B1-045B-476E-AEAF-5DCA7D6FF186</string>
 	</array>
