--- a/Preferences/Disable spell checking for doctype.plist
+++ b/Preferences/Disable spell checking for doctype.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>name</key>
-	<string>Disable spell checking for Doctype</string>
+	<string>Spell Checking: Disable for DocType</string>
 	<key>scope</key>
 	<string>declaration.sgml.doctype</string>
 	<key>settings</key>
