--- a/Snippets/Smart return:indent for tag pairs.plist
+++ b/Snippets/Smart return:indent for tag pairs.plist
@@ -9,7 +9,7 @@
 	<key>keyEquivalent</key>
 	<string></string>
 	<key>name</key>
-	<string>Smart return/indent for tag pairs</string>
+	<string>Special: Return Inside Empty Open/Close Tags</string>
 	<key>scope</key>
 	<string>meta.scope.between-tag-pair.xml</string>
 	<key>uuid</key>
