--- a/Snippets/long tag.plist
+++ b/Snippets/long tag.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>&lt;${1:name}&gt;$0&lt;/${1/([^ ]+).*/$1/}&gt;</string>
 	<key>name</key>
-	<string>long tag</string>
+	<string>Long Tag (&lt;)</string>
 	<key>scope</key>
 	<string>text.xml</string>
 	<key>tabTrigger</key>
