--- a/Snippets/short tag.plist
+++ b/Snippets/short tag.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>&lt;${1:name} /&gt;</string>
 	<key>name</key>
-	<string>short tag</string>
+	<string>Short Tag (&gt;)</string>
 	<key>scope</key>
 	<string>text.xml</string>
 	<key>tabTrigger</key>
