• rename to just Validate Syntax & Tidy (no XML suffix)
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@2247 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/Tidy XML.plist
+++ b/Commands/Tidy XML.plist
@@ -17,7 +17,7 @@ xmllint --format -
 	<key>keyEquivalent</key>
 	<string>^H</string>
 	<key>name</key>
-	<string>Tidy XML</string>
+	<string>Tidy</string>
 	<key>output</key>
 	<string>replaceSelectedText</string>
 	<key>scope</key>
