--- a/Commands/XMLlint.plist
+++ b/Commands/XMLlint.plist
@@ -11,7 +11,7 @@
 	<key>keyEquivalent</key>
 	<string>^V</string>
 	<key>name</key>
-	<string>Validate XML</string>
+	<string>Validate Syntax</string>
 	<key>output</key>
 	<string>showAsHTML</string>
 	<key>scope</key>
