Adding XSL syntax with basic support for templates as symbols and generating XSL to generate selected XML.
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@2873 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -8,12 +8,15 @@
 	<array>
 		<string>F216B838-965F-11D9-9561-000D93589AF6</string>
 		<string>A1DAE610-1E05-4174-BB6D-A51E22DB0764</string>
+		<string>67E7372F-C15F-4009-AE5B-975F2BC9DD91</string>
 		<string>BC8B9FBD-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>F443A9C7-88A5-40EE-820E-A311B16D85C4</string>
 		<string>BC8BA078-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>121626EE-6774-4DFB-B7D5-6E5A8381F1D3</string>
 		<string>D3C4E6DA-6B1C-11D9-8CC2-000D93589AF6</string>
+		<string>DB8033A1-6D8E-4D80-B8A2-8768AAC6125D</string>
 		<string>95788610-7E2E-45CE-9CCE-708FE0C90BF7</string>
+		<string>0B6F39CC-AF39-46CD-85FB-7F895D14F04A</string>
 		<string>34AB30B1-045B-476E-AEAF-5DCA7D6FF186</string>
 		<string>32E29AF6-904C-40F2-AF72-7797ADDAAA3C</string>
 	</array>
