--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -63,7 +63,7 @@
 			<key>end</key>
 			<string>\?&gt;</string>
 			<key>name</key>
-			<string>meta.xml-processing.xml</string>
+			<string>meta.tag.xml-processing.xml</string>
 			<key>patterns</key>
 			<array>
 				<dict>
