Standardize *ml doctype scopes to meta.tag.sgml.doctype.*
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@2989 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -96,7 +96,7 @@
 			<key>end</key>
 			<string>&gt;</string>
 			<key>name</key>
-			<string>meta.sgml.doctype.xml</string>
+			<string>meta.tag.sgml.doctype.xml</string>
 			<key>patterns</key>
 			<array>
 				<dict>
