• remove xsl and xslt file type extensions (as these have their own syntax) • add rss extension (so RSS feeds open as XML by default)
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@3035 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -7,11 +7,10 @@
 		<string>xml</string>
 		<string>tld</string>
 		<string>jsp</string>
-		<string>xsl</string>
-		<string>xslt</string>
 		<string>pt</string>
 		<string>cpt</string>
 		<string>dtml</string>
+		<string>rss</string>
 	</array>
 	<key>firstLineMatch_disabled</key>
 	<string>^\s*&lt;\?xml</string>
