--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -25,30 +25,6 @@
 	<key>patterns</key>
 	<array>
 		<dict>
-			<key>captures</key>
-			<dict>
-				<key>1</key>
-				<dict>
-					<key>name</key>
-					<string>entity.name.tag.xml</string>
-				</dict>
-				<key>2</key>
-				<dict>
-					<key>name</key>
-					<string>meta.scope.between-tag-pair.xml</string>
-				</dict>
-				<key>3</key>
-				<dict>
-					<key>name</key>
-					<string>entity.name.tag.xml</string>
-				</dict>
-			</dict>
-			<key>match</key>
-			<string>&lt;(\w+)[^&gt;]*(&gt;)&lt;/(\1)&gt;</string>
-			<key>name</key>
-			<string>meta.tag.xml</string>
-		</dict>
-		<dict>
 			<key>begin</key>
 			<string>&lt;\?\s*([-_a-zA-Z0-9]+)</string>
 			<key>captures</key>
@@ -140,6 +116,52 @@
 		</dict>
 		<dict>
 			<key>begin</key>
+			<string>&lt;((?:([-_a-zA-Z0-9]+):)?([-_a-zA-Z0-9:]+))(?=(\s[^&gt;]*)?&gt;&lt;/\1&gt;)</string>
+			<key>beginCaptures</key>
+			<dict>
+				<key>2</key>
+				<dict>
+					<key>name</key>
+					<string>entity.other.namespace.xml</string>
+				</dict>
+				<key>3</key>
+				<dict>
+					<key>name</key>
+					<string>entity.name.tag.xml</string>
+				</dict>
+			</dict>
+			<key>end</key>
+			<string>&gt;(&lt;)/(?:([-_a-zA-Z0-9]+):)?([-_a-zA-Z0-9:]+)</string>
+			<key>endCaptures</key>
+			<dict>
+				<key>1</key>
+				<dict>
+					<key>name</key>
+					<string>meta.scope.between-tag-pair.xml</string>
+				</dict>
+				<key>2</key>
+				<dict>
+					<key>name</key>
+					<string>entity.other.namespace.xml</string>
+				</dict>
+				<key>3</key>
+				<dict>
+					<key>name</key>
+					<string>entity.name.tag.xml</string>
+				</dict>
+			</dict>
+			<key>name</key>
+			<string>meta.tag.no-content.xml</string>
+			<key>patterns</key>
+			<array>
+				<dict>
+					<key>include</key>
+					<string>#tagStuff</string>
+				</dict>
+			</array>
+		</dict>
+		<dict>
+			<key>begin</key>
 			<string>&lt;/?(?:([-_a-zA-Z0-9]+):)?([-_a-zA-Z0-9:]+)</string>
 			<key>captures</key>
 			<dict>
@@ -161,29 +183,8 @@
 			<key>patterns</key>
 			<array>
 				<dict>
-					<key>captures</key>
-					<dict>
-						<key>1</key>
-						<dict>
-							<key>name</key>
-							<string>entity.other.namespace.xml</string>
-						</dict>
-						<key>2</key>
-						<dict>
-							<key>name</key>
-							<string>entity.other.attribute-name.xml</string>
-						</dict>
-					</dict>
-					<key>match</key>
-					<string> (?:([-_a-zA-Z0-9]+):)?([a-zA-Z-]+)</string>
-				</dict>
-				<dict>
 					<key>include</key>
-					<string>#doublequotedString</string>
-				</dict>
-				<dict>
-					<key>include</key>
-					<string>#singlequotedString</string>
+					<string>#tagStuff</string>
 				</dict>
 			</array>
 		</dict>
@@ -259,6 +260,37 @@
 			<string>'</string>
 			<key>name</key>
 			<string>string.quoted.single.xml</string>
+		</dict>
+		<key>tagStuff</key>
+		<dict>
+			<key>patterns</key>
+			<array>
+				<dict>
+					<key>captures</key>
+					<dict>
+						<key>1</key>
+						<dict>
+							<key>name</key>
+							<string>entity.other.namespace.xml</string>
+						</dict>
+						<key>2</key>
+						<dict>
+							<key>name</key>
+							<string>entity.other.attribute-name.xml</string>
+						</dict>
+					</dict>
+					<key>match</key>
+					<string> (?:([-_a-zA-Z0-9]+):)?([_a-zA-Z-]+)</string>
+				</dict>
+				<dict>
+					<key>include</key>
+					<string>#doublequotedString</string>
+				</dict>
+				<dict>
+					<key>include</key>
+					<string>#singlequotedString</string>
+				</dict>
+			</array>
 		</dict>
 	</dict>
 	<key>scopeName</key>
