Add a bunch of snippets to help with editing XML Property lists. Add an XML Processing Instruction snippet
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@3576 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -32,6 +32,7 @@
 		<string>F443A9C7-88A5-40EE-820E-A311B16D85C4</string>
 		<string>BC8BA078-5F16-11D9-B9C3-000D93589AF6</string>
 		<string>121626EE-6774-4DFB-B7D5-6E5A8381F1D3</string>
+		<string>4F9C4923-6A89-4B49-BB22-8C446B86D12D</string>
 		<string>D3C4E6DA-6B1C-11D9-8CC2-000D93589AF6</string>
 		<string>DB8033A1-6D8E-4D80-B8A2-8768AAC6125D</string>
 		<string>41A5608C-C589-411E-9581-548D7DE335AC</string>
