• add --valid argument to also check the DTD (ticket 1712684E)
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@3644 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Commands/XMLlint.plist
+++ b/Commands/XMLlint.plist
@@ -5,7 +5,7 @@
 	<key>beforeRunningCommand</key>
 	<string>nop</string>
 	<key>command</key>
-	<string>xmllint --htmlout - 2&gt;&amp;1|perl -pe 's|^((?:&lt;/?[^&gt;]+&gt;)*)(.*?):(\d+):(.*error.*)|$1&lt;a href="txmt://open?line=$3"&gt;$4&lt;/a&gt;|'</string>
+	<string>xmllint --htmlout --valid - 2&gt;&amp;1|perl -pe 's|^((?:&lt;/?[^&gt;]+&gt;)*)(.*?):(\d+):(.*error.*)|$1&lt;a href="txmt://open?line=$3"&gt;$4&lt;/a&gt;|'</string>
 	<key>input</key>
 	<string>document</string>
 	<key>keyEquivalent</key>
