• remove mention of tab trigger from the name
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@3648 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Snippets/short tag.plist
+++ b/Snippets/short tag.plist
@@ -5,7 +5,7 @@
 	<key>content</key>
 	<string>&lt;${1:name} /&gt;</string>
 	<key>name</key>
-	<string>Short Tag (&gt;)</string>
+	<string>Short Tag</string>
 	<key>scope</key>
 	<string>text.xml</string>
 	<key>tabTrigger</key>
