--- a/Snippets/long attribute tag.plist
+++ b/Snippets/long attribute tag.plist
@@ -6,7 +6,7 @@
 	<string>&lt;${1:name} ${2:attr="value"}&gt;$0
 &lt;/${1:name}&gt;</string>
 	<key>name</key>
-	<string>Long Attribute Tag (&lt;a)</string>
+	<string>Long Attribute Tag</string>
 	<key>scope</key>
 	<string>text.xml</string>
 	<key>tabTrigger</key>
