Change invalid.bad-ampersand.xml to invalid.illegal.bad-ampersand.xml
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@4110 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -19,7 +19,7 @@
 	<key>foldingStopMarker</key>
 	<string>^\s*(&lt;/[^&gt;]+&gt;|[/%]&gt;|--&gt;)\s*$</string>
 	<key>keyEquivalent</key>
-	<string>~^X</string>
+	<string>^~X</string>
 	<key>name</key>
 	<string>XML</string>
 	<key>patterns</key>
@@ -198,7 +198,7 @@
 			<key>match</key>
 			<string>&amp;</string>
 			<key>name</key>
-			<string>invalid.bad-ampersand.xml</string>
+			<string>invalid.illegal.bad-ampersand.xml</string>
 		</dict>
 		<dict>
 			<key>begin</key>
