Change declaration.sgml.doctype to meta.tag.sgml.doctype; hasn't been active for a while now. ;)
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@4111 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Preferences/Disable spell checking for doctype.plist
+++ b/Preferences/Disable spell checking for doctype.plist
@@ -5,7 +5,7 @@
 	<key>name</key>
 	<string>Spell Checking: Disable for DocType</string>
 	<key>scope</key>
-	<string>declaration.sgml.doctype</string>
+	<string>meta.tag.sgml.doctype</string>
 	<key>settings</key>
 	<dict>
 		<key>spellChecking</key>
