XML: Change keyword.page-props.xml to keyword.other.page-props.xml
XSL: Change attribute matching to mirror that of XML.
• Rework tag match to scope the namespace separator.
• Change entity.other.namespace.xml to entity.other.attribute-name.namespace.xml
• Change entity.other.attribute-name.xml to entity.other.attribute-name.localname.xml


git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@4416 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -243,7 +243,7 @@
 					<key>match</key>
 					<string>page|include|taglib</string>
 					<key>name</key>
-					<string>keyword.page-props.xml</string>
+					<string>keyword.other.page-props.xml</string>
 				</dict>
 			</array>
 		</dict>
