--- a/info.plist
+++ b/info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>deleted</key>
+	<array>
+		<string>34AB30B1-045B-476E-AEAF-5DCA7D6FF186</string>
+	</array>
 	<key>mainMenu</key>
 	<dict>
 		<key>excludedItems</key>
@@ -38,7 +42,6 @@
 		<string>41A5608C-C589-411E-9581-548D7DE335AC</string>
 		<string>95788610-7E2E-45CE-9CCE-708FE0C90BF7</string>
 		<string>0B6F39CC-AF39-46CD-85FB-7F895D14F04A</string>
-		<string>34AB30B1-045B-476E-AEAF-5DCA7D6FF186</string>
 		<string>32E29AF6-904C-40F2-AF72-7797ADDAAA3C</string>
 	</array>
 	<key>uuid</key>
