Global change of keyword.operator.namespace-separator to punctuation.separator.namespace
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@5467 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -160,7 +160,7 @@
 				<key>5</key>
 				<dict>
 					<key>name</key>
-					<string>keyword.operator.namespace-separator.xml</string>
+					<string>punctuation.separator.namespace.xml</string>
 				</dict>
 				<key>6</key>
 				<dict>
@@ -195,7 +195,7 @@
 				<key>5</key>
 				<dict>
 					<key>name</key>
-					<string>keyword.operator.namespace-separator.xml</string>
+					<string>punctuation.separator.namespace.xml</string>
 				</dict>
 				<key>6</key>
 				<dict>
@@ -241,7 +241,7 @@
 				<key>4</key>
 				<dict>
 					<key>name</key>
-					<string>keyword.operator.namespace-separator.xml</string>
+					<string>punctuation.separator.namespace.xml</string>
 				</dict>
 				<key>5</key>
 				<dict>
@@ -447,7 +447,7 @@
 						<key>3</key>
 						<dict>
 							<key>name</key>
-							<string>keyword.operator.namespace-separator.xml</string>
+							<string>punctuation.separator.namespace.xml</string>
 						</dict>
 						<key>4</key>
 						<dict>
