--- a/Syntaxes/XSL.plist
+++ b/Syntaxes/XSL.plist
@@ -35,7 +35,7 @@
 				<key>3</key>
 				<dict>
 					<key>name</key>
-					<string>keyword.operator.namespace-separator.xml</string>
+					<string>punctuation.separator.namespace.xml</string>
 				</dict>
 				<key>4</key>
 				<dict>
@@ -65,7 +65,7 @@
 						<key>3</key>
 						<dict>
 							<key>name</key>
-							<string>keyword.operator.namespace-separator.xml</string>
+							<string>punctuation.separator.namespace.xml</string>
 						</dict>
 						<key>4</key>
 						<dict>
