Fix an error from last night's round of commits.
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@5482 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -294,7 +294,7 @@
 				<key>0</key>
 				<dict>
 					<key>name</key>
-					<string>punctuation.definition.embedded.begin.xml</string>
+					<string>punctuation.section.embedded.begin.xml</string>
 				</dict>
 			</dict>
 			<key>end</key>
@@ -304,7 +304,7 @@
 				<key>0</key>
 				<dict>
 					<key>name</key>
-					<string>punctuation.definition.embedded.end.xml</string>
+					<string>punctuation.section.embedded.end.xml</string>
 				</dict>
 			</dict>
 			<key>name</key>
@@ -327,7 +327,7 @@
 				<key>0</key>
 				<dict>
 					<key>name</key>
-					<string>punctuation.definition.embedded.begin.xml</string>
+					<string>punctuation.section.embedded.begin.xml</string>
 				</dict>
 			</dict>
 			<key>end</key>
@@ -337,7 +337,7 @@
 				<key>0</key>
 				<dict>
 					<key>name</key>
-					<string>punctuation.definition.embedded.end.xml</string>
+					<string>punctuation.section.embedded.end.xml</string>
 				</dict>
 			</dict>
 			<key>name</key>
