Change string.unquoted.xml.cdata to string.unquoted.cdata.xml
git-svn-id: http://svn.textmate.org/trunk/Bundles/XML.tmbundle@5598 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -370,7 +370,7 @@
 				</dict>
 			</dict>
 			<key>name</key>
-			<string>string.unquoted.xml.cdata</string>
+			<string>string.unquoted.cdata.xml</string>
 		</dict>
 	</array>
 	<key>repository</key>
